[tool.poetry]
name = "thriftease-api"
version = "0.1.0"
description = ""
authors = ["enaielei <nommel.isanar.lavapie.amolat@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
